feat(api-gateway,bff-web): Fase 2 — Gateway reactivo con JWT + esqueleto BFF
api-gateway (puerto 8080):
- Spring Cloud Gateway (WebFlux) con 6 rutas declaradas
- SecurityWebFilterChain reactivo: /api/auth/login público, resto JWT
- NimbusReactiveJwtDecoder con clave pública RSA (parseo PEM)
- Swagger UI agregado en /docs (springdoc-webflux)
- Dockerfile multi-stage + docker-compose.yml

bff-web esqueleto (puerto 8086):
- WebFlux, Resilience4j, sin JPA ni Postgres (ADR 0003)
- Estructura de capas preparada (domain/app/infra/interfaces)
- HealthController smoke test + SecurityConfig mínimo

Fix transversal: parseo PEM de claves RSA en SecurityConfig (auth-service + api-gateway)

Tests: api-gateway 3/3 ✅, bff-web 1/1 ✅, auth-service 22/22 ✅
Closes: Fase 2 del roadmap